# py-predicate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  pyproject.toml
benchmarks/: data.js  test_eval_bench.py  test_generator_bench.py  test_optimizer_bench.py
docs/: cli.rst  conf.py  formatters.rst  generation.rst  has_key_p.rst  index.rst  instrumentation.rst  lazy_p.rst  lazy_predicates.rst  optimization.rst  optimized.dot  predicates.rst  requirements.txt  root_p.rst  set_predicates.rst  standard_predicates.rst  str_predicates.rst  this_p.rst
predicate/: __init__.py  accepts_predicate.py  all_predicate.py  always_false_predicate.py  always_true_predicate.py  analysis.py  any_predicate.py  comp_predicate.py  compile_predicate.py  consumes.py  count_predicate.py  dict_of_predicate.py  eq_predicate.py  exactly_predicate.py  exception_predicate.py  exercise.py  fn_predicate.py  ge_predicate.py  gt_predicate.py  has_key_predicate.py  has_length_predicate.py  has_path_predicate.py  helpers.py  implies.py  in_predicate.py  ip_address_predicates.py  is_async_predicate.py  is_callable_p.py  is_callable_predicate.py  is_close_predicate.py  is_instance_predicate.py  is_lambda_predicate.py  is_none_predicate.py  is_not_none_predicate.py  is_predicate.py  is_predicate_of_p.py  is_same_predicate.py  is_subclass_predicate.py  juxt_predicate.py  lazy_predicate.py  (+34 more)
requirements/: development.txt
test/: conftest.py  helpers.py  test_accepts_predicate.py  test_all_predicate.py  test_all_predicate_optimizer.py  test_always_false_predicate.py  test_always_true_predicate.py  test_analysis.py  test_and_predicate.py  test_and_predicate_optimizer.py  test_any_predicate.py  test_comp_predicate.py  test_compile_predicate.py  test_count_predicate.py  test_dict_of_predicate.py  test_dict_predicate.py  test_eq_predicate.py  test_exception_predicate.py  test_exercise.py  test_explain.py  test_fn_predicate.py  test_ge_predicate.py  test_gt_predicate.py  test_has_length_predicate.py  test_has_path_predicate.py  test_implies.py  test_implies_predicate.py  test_in_predicate.py  test_in_predicate_predicate.py  test_intersects_predicate.py  test_ip_address_predicates.py  test_is_async_predicate.py  test_is_callable.py  test_is_callable_predicate.py  test_is_close_predicate.py  (+60 more)
(+111 files in other folders)
